fix to 8 java version